--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "build": "run-p type-check \"build-only {@}\" --",
     "preview": "vite preview",
     "build-only": "vite build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "type-check": "vue-tsc --noEmit -p tsconfig.app.json --composite false"
   },
   "dependencies": {
@@ -17,6 +19,7 @@
     "@types/node": "^18.18.5",
     "@vitejs/plugin-vue": "^4.4.0",
     "@vue/tsconfig": "^0.4.0",
+    "gh-pages": "^6.1.1",
     "npm-run-all2": "^6.1.1",
     "sass": "^1.69.4",
     "typescript": "~5.2.0",
